--- a/projects/sierra.html
+++ b/projects/sierra.html
@@ -7,77 +7,77 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-  <link rel=icon href='../images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="icon" href="../images/icons/mainfavicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href='../css/queries.css'>
+  <link rel="stylesheet" href="../css/queries.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
 </head>
 
-<body class='fade'>
+<body class="fade">
 
   <header>
-    <span style="font-size:100px;cursor:pointer" id='toggle'>&#9776;</span>
+    <span style="font-size:100px;cursor:pointer" id="toggle">&#9776;</span>
     <div class="slider opened" id="overlay">
 
       <nav class="overlay-menu">
         <ul>
-          <a href='../index.html'><li>works</li></a>
-          <a href='../about.html'><li>about</li></a>
-          <a href='../Kaela_Han_Resume.pdf' target="_blank"><li>resume</li></a>
-          <a href='art.html'><li>art</li></a>
+          <a href="../index.html"><li>works</li></a>
+          <a href="../about.html"><li>about</li></a>
+          <a href="../Kaela_Han_Resume.pdf" target="_blank"><li>resume</li></a>
+          <a href="https://www.kaelahan.com"><li>art</li></a>
       </ul>
     </nav>
     </div>
 <!-- BEGIN NAVIGATION-->
 
-    <nav id="nav1" class='nav'>
+    <nav id="nav1" class="nav">
       <a href="../index.html">WORKS |</a>
       <a href="../about.html">ABOUT |</a>
       <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
     </nav>
 
-    <nav id="nav2" class='nav'>
-      <a href="art.html">ART & PHOTOGRAPHY |</a>
+    <nav id="nav2" class="nav">
+      <a href="https://www.kaelahan.com">ART |</a>
       <a href="posters.html"> TYPOGRAPHY</a>
     </nav>
   </header>
 
 <!-- BEGIN MAIN CONTENT -->
 
-  <section class='maincontent'>
-        <div id='sierra-intro' class='intro'>
+  <section class="maincontent">
+        <div id="sierra-intro" class="intro">
             <h3>BRANDING</h3>
             <h1>sierra<br>painting corp.</h1>
 
             <ul>
-                <hr class='dash'><li><span class='heading'>TOOLS |</span> Adobe Illustrator, Photoshop</li><br>
-                <hr class='dash'><li><span class='heading'>DELIVERABLES |</span> Brand Identity, <br class='static'>Business System</li>
+                <hr class="dash"><li><span class="heading">TOOLS |</span> Adobe Illustrator, Photoshop</li><br>
+                <hr class="dash"><li><span class="heading">DELIVERABLES |</span> Brand Identity, <br class="static">Business System</li>
             </ul>
         </div>
 
-        <img src="../images/sierra/Sierra_1.png" id='sierra-1' class='intro-img'>
+        <img src="../images/sierra/Sierra_1.png" alt="Sierra Business Card" id="sierra-1" class="intro-img">
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content'>
-          <div class='overview-content'>
+        <section class="content">
+          <div class="overview-content">
               <h5>THE CHALLENGE</h5>
               <h2>Create graphic identity for Sierra Painting Company.</h2>
-              <hr class='rule' style='color:#134D7F;background-color:#134D7F;'>
+              <hr class="rule" style="color:#134D7F;background-color:#134D7F;">
 
-              <section class='info'>
-                  <div class='column'>
+              <section class="info">
+                  <div class="column">
                       <h5>CLIENT</h5>
                       <p>Sierra Painting Corp.</p>
                   </div>
 
-                  <div class='column'>
+                  <div class="column">
                       <h5>DATE</h5>
                       <p>Dec. 2017 - Apr. 2018</p>
                   </div>
 
-                  <div class='column'>
+                  <div class="column">
                       <h5>SERVICES</h5>
                       <p>Logo Design, Complete Brand Identity, Business System (letterhead, envelope, proposal, invoice, business card)</p>
                   </div>
@@ -85,50 +85,50 @@
           </div>
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content'>
-            <h2>Concepts & Ideas</h2>
-            <hr class='rule' style='color:#134D7F;background-color:#134D7F;'>
+        <section class="content">
+            <h2>Concepts &amp; Ideas</h2>
+            <hr class="rule" style="color:#134D7F;background-color:#134D7F;">
 
-            <img src='../images/sierra/Logo_Sketch1.png' id='logo-1'alt='Logo Sketches' class='logo-img'>
-            <img src='../images/sierra/Logo_Sketch2.png' id='logo-2' alt='Logo Sketches' class='logo-img'>
+            <img src="../images/sierra/Logo_Sketch1.png" id="logo-1" alt="Logo Sketches' class='logo-img">
+            <img src="../images/sierra/Logo_Sketch2.png" id="logo-2" alt="Logo Sketches" class="logo-img">
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content'>
+        <section class="content">
             <h2>Logo Official</h2>
-            <hr class='rule' style='color:#134D7F;background-color:#134D7F;'>
+            <hr class="rule" style="color:#134D7F;background-color:#134D7F;">
 
             <p>After several iterations of hand-drawn and digital sketches, I arrived at my final concept: I integrated a mountain graphic into a paint brush, next to which I placed the company name. I used Proxima Nova in order to create a minimalistic and professional
               aesthetic while shifting away from the generally heavy and blockish aesthetic of other painting company logos I had seen. </p>
-            <img src='../images/sierra/Final_Logo.png' class='final-logo' alt='Sierra Painting Corp. Final Logo'>
-            <img src='../images/sierra/Logo_Variation.png' id='logo-variation' alt='Sierra Painting Corp. Logo Variations'>
+            <img src="../images/sierra/Final_Logo.png" class="final-logo" alt="Sierra Painting Corp. Final Logo">
+            <img src="../images/sierra/Logo_Variation.png' id='logo-variation" alt="Sierra Painting Corp. Logo Variations">
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content-2'>
+        <section class="content-2">
           <h2>Graphic Identity</h2>
-          <hr class='rule' style='width:3em;height:5px;color:#134D7F;background-color:#134D7F;margin-bottom: 3%'>
+          <hr class="rule" style="width:3em;height:5px;color:#134D7F;background-color:#134D7F;margin-bottom: 3%">
 
-          <img src='../images/sierra/Graphic_Identity.png' class='graphic-identity' alt='Graphic Identity'>
+          <img src="../images/sierra/Graphic_Identity.png" class="graphic-identity" alt="Graphic Identity">
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content-2'>
+        <section class="content-2">
 
             <h2>The sleek and minimalistic graphic identity is tied closely to the Sierra Painting Corp.'s professional work ethic and their ability to build trust and loyalty with their customers.</h2>
-            <hr class='rule' style='color:#134D7F;background-color:#134D7F;'>
+            <hr class="rule" style="color:#134D7F;background-color:#134D7F;">
 
             <p>As the first and only designer working for Sierra, I was able to communicate directly with the client on their creative vision. The lack of brand guidelines pushed me to create a graphic identity/logo that was not only professional and unique,
               but simple with a strong and straightforward graphic standard.</p>
 
-                <img src='../images/sierra/Business_Cards.png' id='busi-card' alt='Sierra Painting Corp. Business Cards'>
-                <img src='../images/sierra/Proposal_Mockup.png' id='proposal' alt='Proposal Mockup'>
-                <img src='../images/sierra/Business_System.png' id='busi-sys' alt='Business System'>
+                <img src="../images/sierra/Business_Cards.png" id="busi-card" alt="Sierra Painting Corp. Business Cards">
+                <img src="../images/sierra/Proposal_Mockup.png" id="proposal" alt="Proposal Mockup">
+                <img src="../images/sierra/Business_System.png" id="busi-sys" alt="Business System">
 
 
         </section>
@@ -138,9 +138,8 @@
 
 <!-- FOOTER -->
     <footer>
-        <a href='https://www.instagram.com/kaeladoodlez/'><img src='../images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-        <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='../images/icons/linked.png' class='icon' alt='Instagram Icon'></a>
-        <a href='https://soundcloud.com/kaela-han'><img src='../images/icons/sound.png' class='icon' alt='Instagram Icon'></a>
+        <a href="https://www.instagram.com/kaela.han.art/"><img src="../images/icons/insta.png" class="icon" alt="Instagram Icon"></a>
+        <a href="https://www.linkedin.com/in/kaela-han-54360aa8/"><img src="../images/icons/linked.png" class="icon" alt="Instagram Icon"></a>
     </footer>
 </body>
 
