--- a/projects/visualizer.html
+++ b/projects/visualizer.html
@@ -8,83 +8,84 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-  <link rel=icon href='../images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="icon" href="../images/icons/mainfavicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href='../css/queries.css'>
+  <link rel="stylesheet" href="../css/queries.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
 </head>
 
-<body class='fade'>
+<body class="fade">
 
 <!-- BEGIN NAVIGATION-->
   <!-- HAMBURGER MENU -->
-  <span style="font-size:100px;cursor:pointer" id='toggle'>&#9776;</span>
+  <span style="font-size:100px;cursor:pointer" id="toggle">&#9776;</span>
 
   <!-- OVERLAY -->
   <div class="slider opened" id="overlay">
     <nav class="overlay-menu">
       <ul>
-        <a href='../index.html'>
+        <a href="../index.html">
           <li>works</li>
         </a>
-        <a href='../about.html'>
+        <a href="../about.html">
           <li>about</li>
         </a>
-        <a href='Kaela_Han_Resume.pdf' target="_blank">
+        <a href="Kaela_Han_Resume.pdf" target="_blank">
           <li>resume</li>
         </a>
-        <a href='art.html'>
+        <a href="https://www.kaelahan.com">
           <li>art</li>
         </a>
       </ul>
     </nav>
   </div>
-
-      <nav id="nav1" class='nav'>
+	
+<header>
+      <nav id="nav1" class="nav">
           <a href="../index.html">WORKS |</a>
           <a href="../about.html">ABOUT |</a>
           <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
       </nav>
 
-      <nav id="nav2" class='nav'>
-          <a href="art.html">ART & PHOTOGRAPHY |</a>
+      <nav id="nav2" class="nav">
+          <a href="https://www.kaelahan.com">ART |</a>
           <a href="posters.html"> TYPOGRAPHY</a>
       </nav>
   </header>
 
 <!-- BEGIN MAIN CONTENT -->
 
-  <section class='maincontent'>
-        <div id='vis-intro' class='intro'>
+  <section class="maincontent">
+        <div id="vis-intro" class="intro">
             <h3>UI / UX</h3>
             <h1>audiovisualizer</h1>
 
             <ul>
-              <hr class='dash'><li><span class='heading'>TOOLS |</span> Javascript, p5 Sound, HTML5, CSS, Github</li><br>
-              <hr class='dash'><li><span class='heading'>DELIVERABLES |</span> Interactive Interface</li><br>
-              <hr class='dash'><li><span class='heading'>LINK |</span><a href='https://kaekae13.github.io/Visualizer/index.html' target="_blank"> Mood Visualizer</a></li><br>
+              <hr class="dash"><li><span class="heading">TOOLS |</span> Javascript, p5 Sound, HTML5, CSS, Github</li><br>
+              <hr class="dash"><li><span class="heading">DELIVERABLES |</span> Interactive Interface</li><br>
+              <hr class="dash"><li><span class="heading">LINK |</span><a href="https://kaekae13.github.io/Visualizer/index.html" target="_blank"> Mood Visualizer</a></li><br>
             </ul>
         </div>
 
-        <img src="../images/visualizer/Visualizer_1.png" id='visualizer-1' class='intro-img'>
+        <img src="../images/visualizer/Visualizer_1.png" id="visualizer-1" class="intro-img">
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content'>
-          <div class='overview-content'>
+        <section class="content">
+          <div class="overview-content">
               <h5>THE CHALLENGE</h5>
               <h2>Build an application ground up, taking into account effective principles of user interface design and best practices in web development.</h2>
-              <hr class='rule' style='color:#33FF99;background-color:#33FF99;'>
+              <hr class="rule" style="color:#33FF99;background-color:#33FF99;">
 
               <p>The interface allows users to play music and customize the visual aspects of their music player: they can select from different colors, control the type of visuals (waves, circles, bars), and upload their own audio file as well (which is a function that is underway). The interface is intended as a tool for relaxation, creative enjoyment, and a way to recreate the experience of listening to music.</p>
-              <section class='info'>
-                  <div class='column'>
+              <section class="info">
+                  <div class="column">
                       <h5>DATE</h5>
                       <p>Apr. 2018</p>
                   </div>
 
-                  <div class='column'>
+                  <div class="column">
                       <h5>SERVICES</h5>
                       <p>Rebranded Graphic Identity, New Interface Design</p>
                   </div>
@@ -92,46 +93,46 @@
           </div>
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section id='vis-research' class='content'>
-          <h2>Visual Research & Concepts</h2>
-          <hr class='rule' style='color:#33CC66;background-color:#33CC66;'>
+        <section id="vis-research" class="content">
+          <h2>Visual Research &amp; Concepts</h2>
+          <hr class="rule" style="color:#33CC66;background-color:#33CC66;">
 
           <p>I wanted to create a very sleek, modern, and clean aesthetic for the project and use futuristic, fluid shapes and bright vibrant colors and my moodboard reflects that: I found a variety of dynamic and vibrantly colored graphics - I sought to find a variety of different shapes including circular shapes, waveforms, and abstract blob-like forms.
           </p>
-          <img src='../images/visualizer/Moodboard.png' alt='Moodboard' id='moodboard'>
+          <img src="../images/visualizer/Moodboard.png" alt="Moodboard" id="moodboard">
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content'>
+        <section class="content">
           <h2>Wireframes<br>(mobile + desktop)</h2>
-          <hr class='rule' style='color:#33CC66;background-color:#33CC66;'>
+          <hr class="rule" style="color:#33CC66;background-color:#33CC66;">
 
-          <p id='wireCaption'>Though the final interface is designed only for desktop view, I plan to continue improving upon the project and eventually develop it into a mobile application. The following wireframes show various different pages & layouts from the interface.</p>
-          <img src='../images/visualizer/Desktop_Wireframe.png' class='wireframe' alt='Desktop Wireframes' >
-          <img src='../images/visualizer/Mobile_Wireframe.png' id='mobile-wire' class='wireframe' alt='Mobile Wireframes'>
+          <p id="wireCaption">Though the final interface is designed only for desktop view, I plan to continue improving upon the project and eventually develop it into a mobile application. The following wireframes show various different pages &amp; layouts from the interface.</p>
+          <img src="../images/visualizer/Desktop_Wireframe.png" class="wireframe" alt="Desktop Wireframes">
+          <img src="../images/visualizer/Mobile_Wireframe.png" id="mobile-wire" class="wireframe" alt="Mobile Wireframes">
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content'>
+        <section class="content">
           <h2>Site Flow</h2>
-          <hr class='rule' style='color:#33CC66;background-color:#33CC66;'>
+          <hr class="rule" style="color:#33CC66;background-color:#33CC66;">
 
-          <img src='../images/visualizer/Site_Flow.png' alt='Site Flow Diagram' id='siteflow'>
+          <img src="../images/visualizer/Site_Flow.png" alt="Site Flow Diagram" id="siteflow">
         </section>
 
-        <hr class='divider'>
+        <hr class="divider">
 
-        <section class='content'>
+        <section class="content">
           <h2>Final Interface</h2>
-          <hr class='rule' style='color:#33CC66;background-color:#33CC66;'>
+          <hr class="rule" style="color:#33CC66;background-color:#33CC66;">
 
-          <img src='../images/visualizer/1.gif' class='visgif' alt='Visualizer Screen Recording'>
-          <img src='../images/visualizer/2.gif' class='visgif' alt='Visualizer Screen Recording'>
-          <img src='../images/visualizer/3.gif' class='visgif' alt='Visualizer Screen Recording'>
+          <img src="../images/visualizer/1.gif" class="visgif" alt="Visualizer Screen Recording">
+          <img src="../images/visualizer/2.gif" class="visgif" alt="Visualizer Screen Recording">
+          <img src="../images/visualizer/3.gif" class="visgif" alt="Visualizer Screen Recording">
         </section>
   </section>
 
@@ -139,9 +140,8 @@
 
 <!-- FOOTER -->
   <footer>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='../images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='../images/icons/linked.png' class='icon' alt='LinkedIn Icon'></a>
-    <a href='https://soundcloud.com/kaela-han'><img src='../images/icons/sound.png' class='icon' alt='SoundCloud Icon'></a>
+    <a href="https://www.instagram.com/kaela.han.art/"><img src="../images/icons/insta.png" class="icon" alt="Instagram Icon"></a>
+    <a href="https://www.linkedin.com/in/kaela-han-54360aa8/"><img src="../images/icons/linked.png" class="icon" alt="LinkedIn Icon"></a>
   </footer>
 </body>
 
