--- a/projects/ignite.html
+++ b/projects/ignite.html
@@ -7,102 +7,103 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-  <link rel=icon href='../images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="icon" href="../images/icons/mainfavicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href='../css/queries.css'>
+  <link rel="stylesheet" href="../css/queries.css">
   <link rel="stylesheet" href="../css/carousel-slideshow.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
 </head>
 
-<body class='fade'>
+<body class="fade">
 
   <header>
 
 <!-- BEGIN NAVIGATION-->
     <!-- HAMBURGER MENU -->
-    <span style="font-size:100px;cursor:pointer" id='toggle'>&#9776;</span>
+    <span style="font-size:100px;cursor:pointer" id="toggle">&#9776;</span>
 
     <!-- OVERLAY -->
 
     <div class="slider opened" id="overlay">
       <nav class="overlay-menu">
         <ul>
-          <a href='../index.html'>
+          <a href="../index.html">
             <li>works</li>
           </a>
-          <a href='../about.html'>
+          <a href="../about.html">
             <li>about</li>
           </a>
-          <a href='../Kaela_Han_Resume.pdf' target="_blank">
+          <a href="../Kaela_Han_Resume.pdf" target="_blank">
             <li>resume</li>
           </a>
-          <a href='art.html'>
+          <a href="https://www.kaelahan.com">
             <li>art</li>
           </a>
         </ul>
       </nav>
     </div>
 
-    <nav id="nav1" class='nav'>
+<header>
+    <nav id="nav1" class="nav">
       <a href="../index.html">WORKS |</a>
       <a href="../about.html">ABOUT |</a>
       <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
     </nav>
 
-    <nav id="nav2" class='nav'>
-      <a href="art.html">ART & PHOTOGRAPHY |</a>
+    <nav id="nav2" class="nav">
+      <a href="https://www.kaelahan.com">ART |</a>
       <a href="posters.html"> TYPOGRAPHY</a>
     </nav>
   </header>
 
   <!-- BEGIN MAIN CONTENT -->
 
-  <section class='maincontent'>
+  <section class="maincontent">
 
-    <div id='ig-intro' class='intro'>
+    <div id="ig-intro" class="intro">
       <h3>BRANDING</h3>
       <h1>ignite</h1>
 
       <ul>
-        <hr class='dash'>
-        <li><span class='heading'>TOOLS |</span> Adobe Illustrator, Photoshop, Indesign, AfterEffects</li><br>
-        <hr class='dash'>
-        <li><span class='heading'>DELIVERABLES |</span> Brand Identity, Business System, Marketing Applications</li><br>
-        <hr class='dash'>
-        <li><span class='heading'>COLLABORATION |</span><a href='https://www.jieesong.com/' target="_blank"> Jie Song,</a>
-          <a href='https://www.emwlin.com/' target="_blank">Emily Lin</a></li><br>
-        <hr class='dash'>
-        <li><span class='heading'>LINK |</span><a href='https://issuu.com/kaehan/docs/ignite_process_final' target="_blank"> Process Manual</a></li>
+        <hr class="dash">
+        <li><span class="heading">TOOLS |</span> Adobe Illustrator, Photoshop, Indesign, AfterEffects</li><br>
+        <hr class="dash">
+        <li><span class="heading">DELIVERABLES |</span> Brand Identity, Business System, Marketing Applications</li><br>
+        <hr class="dash">
+        <li><span class="heading">COLLABORATION |</span><a href="https://www.jieesong.com/" target="_blank"> Jie Song,</a>
+          <a href="https://www.emwlin.com/" target="_blank">Emily Lin</a></li><br>
+        <hr class="dash">
+        <li><span class="heading">LINK |</span><a href="https://issuu.com/kaehan/docs/ignite_process_final" target="_blank"> Process Manual</a></li>
       </ul>
     </div>
 
-    <img src="../images/ignite/Ignite_1.png" id='ig-1' class='intro-img'>
+    <img src="../images/ignite/Ignite_1.png" alt="Ignite marketing and brand assets" id="ig-1" class="intro-img">
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <section class='content'>
-      <div class='overview-content'>
+    <section class="content">
+      <div class="overview-content">
           <h5>THE CHALLENGE</h5>
           <h2>Plan strategy and create materials for an awareness campaign.</h2>
-          <hr class='rule' style='color:orange;background-color:orange;'>
+          <hr class="rule" style="color:orange;background-color:orange;">
 
           <p>Ignite is an awareness campaign aimed at preparing high school students for early professionalism by giving them valuable exposure to a wider range of career paths and helping them develop basic professional skills.</p>
           <p>We will begin by targeting East Bay Area high schools, eventually becoming national and with increased successes, international. We want to erase stigmas surrounding certain careers and focus on student interest to give them valuable information
             and guidance as they navigate their way through life after high school and college.</p>
 
-          <section class='info'>
-              <div class='column'>
+          <section class="info">
+              <div class="column">
                   <h5>DATE</h5>
                   <p>Apr. 2018 - June 2018</p>
               </div>
 
-              <div class='column'>
+              <div class="column">
                   <h5>TARGET + CLIENTS</h5>
                   <p>High School Students, Corporate Professionals (Sponsors)</p>
               </div>
 
-              <div class='column'>
+              <div class="column">
                   <h5>SERVICES</h5>
                   <p>Logo Design, Branding Identity, Marketing Applications (Flyer, Poster, Trifold Brochure, Banner, Shirts, Drawstring Bag, Billboard Display, Pins, Pens, Stickers, Cap, Editorial)</p>
               </div>
@@ -110,48 +111,48 @@
       </div>
     </section>
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <section class='content'>
-      <h2>Concepts & Ideas</h2>
-      <hr class='rule' style='color:orange;background-color:orange;'>
+    <section class="content">
+      <h2>Concepts &amp; Ideas</h2>
+      <hr class="rule" style="color:orange;background-color:orange;">
 
       <p>We began the process of logo ideation focusing on only one of our two audiences: high schoolers. Thus, we created logos with a rounded typeface and warm-toned, bright gradients that spoke to the literal meaning of the word 'ignite.' We soon realized
         that these concepts were too childish, especially considering the primary aim of our campaign to help push high schoolers into early professionalism. We also recognized a greater need to address our second audience: the corporate professionals
         who would both participate in and/or potentially fund our campaign.</p>
-      <img src='../images/ignite/Logo_Sketch-1.png' id='ig-logo-1' alt='Digital Logo Sketches'>
+      <img src="../images/ignite/Logo_Sketch-1.png" id="ig-logo-1" alt="Digital Logo Sketches">
     </section>
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <section class='content'>
+    <section class="content">
       <h2>Logo Official</h2>
-      <hr class='rule' style='color:orange;background-color:orange;'>
+      <hr class="rule" style="color:orange;background-color:orange;">
 
-      <p class='logoCaption'>The final Ignite logo consists of a graphic of a lightbulb within type logo, which allowed us to keep an element of playfulness while simultaneously communicating a professional aesthetic through the thin, elegant, and modern typeface.</p>
-      <img src='../images/ignite/Final_Logo.png' class='final-logo' alt='Ignite Final Logo'>
+      <p class="logoCaption">The final Ignite logo consists of a graphic of a lightbulb within type logo, which allowed us to keep an element of playfulness while simultaneously communicating a professional aesthetic through the thin, elegant, and modern typeface.</p>
+      <img src="../images/ignite/Final_Logo.png" class="final-logo" alt="Ignite Final Logo">
     </section>
 
 
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <section class='content'>
+    <section class="content">
       <h2>Business System</h2>
-      <hr class='rule' style='color:orange;background-color:orange;'>
+      <hr class="rule" style="color:orange;background-color:orange;">
 
       <p>Consistency and simplicity was a key component of the business system design,
         which I was primarily responsible for. The lightbulb motif was enlargened and
         used throughout the business system materials and white space was used effectively
         to organize and balance any text.</p>
-      <img src='../images/ignite/Business_System.png' id='ignite-bus' alt='Business System'>
+      <img src="../images/ignite/Business_System.png" id="ignite-bus" alt="Business System">
     </section>
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <section class='content'>
+    <section class="content">
       <h2>Marketing Applications</h2>
-      <hr class='rule' style='color:orange;background-color:orange;'>
+      <hr class="rule" style="color:orange;background-color:orange;">
 
       <p>Promotional materials are to be distributed by the ignite team to high school students during different events and workshops, as well as to the corporate professionals that we will be pitching our campaign to.</p>
 
@@ -167,7 +168,6 @@
         <img src="../images/ignite/Shirt_Back.png" alt="Back of Shirt">
         <img src="../images/ignite/Cap.png" alt="Cap">
         <img src="../images/ignite/Bag.png" alt="Drawstring Bag">
-        <img src="../images/ignite/Stickers.png" alt="Stickers">
         <img src="../images/ignite/Pins.png" alt="Pins">
         <img src="../images/ignite/Pens.png" alt="Pens">
         <img src="../images/ignite/Billboard.png" alt="Billboard Display">
@@ -175,28 +175,28 @@
 
     </section>
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <section class='content'>
-      <h2>Website <br>& Social Media</h2>
-      <hr class='rule' style='color:orange;background-color:orange;'>
+    <section class="content">
+      <h2>Website</h2>
+      <hr class="rule" style="color:orange;background-color:orange;">
 
-      <img src='../images/ignite/Website.png' id='website' alt='Ignite Website'>
-      <img src='../images/ignite/Snapchat.png' id='snapchat' alt='Snapchat Filter'>
+      <img src="../images/ignite/Website.png" alt="Ignite Website">
+      
     </section>
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <section class='content'>
+    <section class="content">
     <h2>Webflow Animation</h2>
-    <hr class='rule' style='color:orange;background-color:orange;'>
+    <hr class="rule" style="color:orange;background-color:orange;">
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/xKnEkiQmhLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen id='webFlow'></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xKnEkiQmhLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen id="webFlow"></iframe>
     </section>
 
-    <hr class='divider'></hr>
+    <hr class="divider"></hr>
 
-    <img src='../images/ignite/Photoshoot_1.jpg' id='ignitePhoto' alt='All Ignite Print Materials'>
+    <img src="../images/ignite/Photoshoot_1.jpg" id="ignitePhoto" alt="All Ignite Print Materials">
 
 
   <!-- end main content -->
@@ -204,9 +204,8 @@
   <!-- FOOTER -->
 
   <footer>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='../images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='../images/icons/linked.png' class='icon' alt='LinkedIn Icon'></a>
-    <a href='https://soundcloud.com/kaela-han'><img src='../images/icons/sound.png' class='icon' alt='SoundCloud Icon'></a>
+    <a href="https://www.instagram.com/kaela.han.art/"><img src="../images/icons/insta.png" class="icon" alt="Instagram Icon"></a>
+    <a href="https://www.linkedin.com/in/kaela-han-54360aa8/"><img src="../images/icons/linked.png" class="icon" alt="LinkedIn Icon"></a>
   </footer>
 
 </body>
