--- a/projects/medium.html
+++ b/projects/medium.html
@@ -7,85 +7,86 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-  <link rel=icon href='../images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="icon" href="../images/icons/mainfavicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href='../css/queries.css'>
+  <link rel="stylesheet" href="../css/queries.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
 </head>
 
-<body class='fade'>
+<body class="fade">
 
 <!-- BEGIN NAVIGATION-->
   <!-- HAMBURGER MENU -->
-  <span style="font-size:100px;cursor:pointer" id='toggle'>&#9776;</span>
+  <span style="font-size:100px;cursor:pointer" id="toggle">&#9776;</span>
 
   <!-- OVERLAY -->
   <div class="slider opened" id="overlay">
     <nav class="overlay-menu">
       <ul>
-        <a href='../index.html'>
+        <a href="../index.html">
           <li>works</li>
         </a>
-        <a href='../about.html'>
+        <a href="../about.html">
           <li>about</li>
         </a>
-        <a href='../Kaela_Han_Resume.pdf' target="_blank">
+        <a href="../Kaela_Han_Resume.pdf" target="_blank">
           <li>resume</li>
         </a>
-        <a href='art.html'>
+        <a href="https://www.kaelahan.com">
           <li>art</li>
         </a>
       </ul>
     </nav>
   </div>
 
-  <nav id="nav1" class='nav'>
+<header>
+  <nav id="nav1" class="nav">
     <a href="../index.html">WORKS |</a>
     <a href="../about.html">ABOUT |</a>
     <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
   </nav>
 
-  <nav id="nav2" class='nav'>
-    <a href="art.html">ART & PHOTOGRAPHY |</a>
+  <nav id="nav2" class="nav">
+    <a href="https://www.kaelahan.com">ART |</a>
     <a href="posters.html"> TYPOGRAPHY</a>
   </nav>
   </header>
 
   <!-- BEGIN MAIN CONTENT -->
 
-  <section class='maincontent'>
-    <div id='medium-intro' class='intro'>
+  <section class="maincontent">
+    <div id="medium-intro" class="intro">
       <h3>UI / UX</h3>
       <h1>medium</h1>
 
       <ul>
-        <hr class='dash'>
-        <li><span class='heading'>TOOLS |</span> Adobe Illustrator, XD, InVision</li><br>
-        <hr class='dash'>
-        <li><span class='heading'>DELIVERABLES |</span> Brand Identity, Interface Design</li><br>
-        <hr class='dash'>
-        <li><span class='heading'>LINK |</span><a href='https://invis.io/W8KDLN0XK67' target="_blank"> Prototype</a></li>
+        <hr class="dash">
+        <li><span class="heading">TOOLS |</span> Adobe Illustrator, XD, InVision</li><br>
+        <hr class="dash">
+        <li><span class="heading">DELIVERABLES |</span> Brand Identity, Interface Design</li><br>
+        <hr class="dash">
+        <li><span class="heading">LINK |</span><a href="https://invis.io/W8KDLN0XK67" target="_blank"> Prototype</a></li>
       </ul>
     </div>
 
-    <img src="../images/medium/Medium_1.png" id='medium-1' class='intro-img' alt='Medium App Mockup'>
+    <img src="../images/medium/Medium_1.png" id="medium-1" class="intro-img" alt="Medium App Mockup">
 
-    <hr class='divider'>
+    <hr class="divider">
 
-    <section class='content'>
-      <div class='overview-content'>
+    <section class="content">
+      <div class="overview-content">
           <h5>THE CHALLENGE</h5>
           <h2>How can we create a positive, friendly platform that not only encourages <strong>connections</strong> between creatives but also creates a strong sense of <strong>support</strong> within that community?</h2>
-          <hr class='rule' style='color:#DD7860;background-color:#DD7860;'>
+          <hr class="rule" style="color:#DD7860;background-color:#DD7860;">
 
-          <section class='info'>
-              <div class='column'>
+          <section class="info">
+              <div class="column">
                   <h5>DATE</h5>
                   <p>Mar. 2018 - June 2018</p>
               </div>
 
-              <div class='column'>
+              <div class="column">
                   <h5>SERVICES</h5>
                   <p>Logo Design, Complete Brand Identity, Interface Design, Working Prototype</p>
               </div>
@@ -93,12 +94,13 @@
       </div>
     </section>
 
-    <hr class='divider'>
+    <hr class="divider">
 
-    <section class='content-2'>
+    <section class="content-2">
+	<div>
         <h2>The idea for Medium arose from my personal experiences with other design-oriented interfaces such as Behance and Dribble, and my desire to create an application that further encourages creatives to openly support one another and give back to their
         artistic community.</h2>
-        <hr class='rule' style='color:#DD7860;background-color:#DD7860;'>
+        <hr class="rule" style="color:#DD7860;background-color:#DD7860;">
 
         <p>Medium is a mobile application designed specifically for creatives to connect, collaborate, organize different types of creative/artistic events, as well as share donate/share resources. The interface is dedicated to creating
         a stronger sense of community and encouraging more connection between individuals in the creative field.</p>
@@ -108,7 +110,7 @@
         or donates their first item, creates their first event, etc.</p>
       </div>
     </section>
-    <img src='../images/medium/Medium_Screens.jpg' id='medium-scrn' alt='Medium Screenshots'>
+    <img src="../images/medium/Medium_Screens.jpg" id="medium-scrn" alt="Medium Screenshots">
   </section>
 
   <!-- end main content -->
@@ -117,13 +119,12 @@
   <!-- FOOTER -->
 
   <footer>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='../images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='../images/icons/linked.png' class='icon' alt='LinkedIn Icon'></a>
-    <a href='https://soundcloud.com/kaela-han'><img src='../images/icons/sound.png' class='icon' alt='SoundCloud Icon'></a>
+    <a href="https://www.instagram.com/kaela.han.art/"><img src="../images/icons/insta.png" class="icon" alt="Instagram Icon"></a>
+    <a href="https://www.linkedin.com/in/kaela-han-54360aa8/"><img src="../images/icons/linked.png" class="icon" alt="LinkedIn Icon"></a>
   </footer>
 
 </body>
 
-<script src='../js/script.js'></script>
+<script src="../js/script.js"></script>
 
 </html>
