--- a/projects/posters.html
+++ b/projects/posters.html
@@ -7,61 +7,62 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-  <link rel=icon href='../images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="icon" href="../images/icons/mainfavicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href='../css/queries.css'>
+  <link rel="stylesheet" href="../css/queries.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
 </head>
 
-<body class='fade'>
+<body class="fade">
 
   <!-- BEGIN NAVIGATION-->
   <!-- HAMBURGER MENU -->
-  <span style="font-size:100px;cursor:pointer" id='toggle'>&#9776;</span>
+  <span style="font-size:100px;cursor:pointer" id="toggle">&#9776;</span>
 
   <!-- OVERLAY -->
   <div class="slider opened" id="overlay">
     <nav class="overlay-menu">
       <ul>
-        <a href='../index.html'>
+        <a href="../index.html">
           <li>works</li>
         </a>
-        <a href='../about.html'>
+        <a href="../about.html">
           <li>about</li>
         </a>
-        <a href='../Kaela_Han_Resume.pdf' target="_blank">
+        <a href="../Kaela_Han_Resume.pdf" target="_blank">
           <li>resume</li>
         </a>
-        <a href='art.html'>
+        <a href="https://www.kaelahan.com">
           <li>art</li>
         </a>
       </ul>
     </nav>
   </div>
-
-  <nav id="nav1" class='nav'>
+	
+<header>
+  <nav id="nav1" class="nav">
     <a href="../index.html">WORKS |</a>
     <a href="../about.html">ABOUT |</a>
     <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
   </nav>
 
-  <nav id="nav2" class='nav'>
-    <a href="art.html">ART & PHOTOGRAPHY |</a>
+  <nav id="nav2" class="nav">
+    <a href="https://www.kaelahan.com">ART |</a>
     <a href="posters.html"> TYPOGRAPHY</a>
   </nav>
   </header>
 
   <!-- BEGIN MAIN CONTENT -->
 
-  <section class='maincontent'>
-    <div id='post-intro' class='intro'>
+  <section class="maincontent">
+    <div id="post-intro" class="intro">
       <h3>TYPOGRAPHIC<br>EXPLORATIONS</h3>
       <h1>posters</h1>
     </div>
 
-    <img src="../images/posters/poster1.png" class='poster' id='poster-1' alt='Poster 1'>
-    <img src='../images/posters/poster2.png' class='poster' alt='Poster 2'>
+    <img src="../images/posters/poster1.png" class="poster" id="poster-1" alt="Poster 1">
+    <img src="../images/posters/poster2.png" class="poster" alt="Poster 2">
   </section>
 
   <!-- end main content -->
@@ -70,9 +71,9 @@
   <!-- FOOTER -->
 
   <footer>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='../images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='../images/icons/linked.png' class='icon' alt='LinkedIn Icon'></a>
-    <a href='https://soundcloud.com/kaela-han'><img src='../images/icons/sound.png' class='icon' alt='SoundCloud Icon'></a>
+    <a href="https://www.instagram.com/kaela.han.art/"><img src="../images/icons/insta.png" class="icon" alt="Instagram Icon"></a>
+    <a href="https://www.linkedin.com/in/kaela-han-54360aa8/"><img src="../images/icons/linked.png" class="icon" alt="LinkedIn Icon"></a>
+    
   </footer>
 
 </body>
