--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div id="Col2" class="col">
       <a href="projects/visualizer.html"><img src="images/visualizer//Nav_Img.png" id="vis1" alt="Visualizer Screen"></a>
-      <a href="projects/pbteen.html"><img src="images/homestead/Nav_Img.png" id="h2" alt="Homestead Desktop Mockup"></a>
+      <a href="projects/pbteen.html"><img src="images/pbteen/Nav_Img.png" id="h2" alt="Pottery Barn Teen"></a>
       <a href="projects/ignite.html"><img src="images/ignite/Brochure.png" id="i1" alt = "Ignite Brochure Mockup"></a>
     </div>
 
@@ -81,7 +81,7 @@
     <div id="Col3" class="col">
       <a href="projects/posters.html"><img src="images/posters/navimg-1.png" id="p1" alt = "Poster Mockup"></a>
       <a href="projects/ignite.html"><img src="images/ignite/Brochure.png" id="i2" alt="Ignite Brochure Mockup"></a>
-      <a href="projects/pbteen.html"><img src="images/homestead/Nav_Img-1.png" id="h1" alt="Homestead Desktop Mockup"></a>
+      <a href="projects/pbteen.html"><img src="images/pbteen/Nav_Img-1.png" id="h1" alt="Pottery Barn Teen"></a>
       <a href="projects/visualizer.html"><img src="images/visualizer/Nav_Img_1.png" id="vis2" alt="Visualizer Screen"></a>
     </div>
 
