--- a/projects/pbteen.html
+++ b/projects/pbteen.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Homestead HS Rebranding</title>
+  <title>Pottery Barn Teen Web Design</title>
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
@@ -75,7 +75,7 @@
     <section class="content">
       <div class="overview-content">
           <h5>THE CHALLENGE</h5>
-          <h2>Redesign the Storage &amp; Organization Landing Page for the Pottery Barn Teen Spring 2022 season, creating corresponding email &amp; social assets as a complete marketing campaign.</h2>
+          <h2>Redesign the Storage &amp; Organization Landing Page for the Pottery Barn Teen Spring 2023 season, creating corresponding email &amp; social assets as a complete marketing campaign.</h2>
           <hr class="rule" style="color:#108046;background-color:#94acbb;">
 
      
