--- a/projects/pbteen.html
+++ b/projects/pbteen.html
@@ -98,17 +98,18 @@
   
 
     <section class="content-2">
-        <h2>For this project, it was most important to create a highly functional and visually appealing shopping experience for the customer.&nbsp;</h2>
+        <h2>The primary aim of this project was to create an elevated shopping experience for the customer across all channels.</h2>
         <hr class="rule" style="color:#108046;background-color:#94acbb;">
-        <p>With the aim of creating an elevated shopping experience for the customer, I placed emphasis on clean layout design and intentional curation of images. I worked closely with marketing and ecommmerce teams to ensure that high-performing products were featured and all key categories were captured.</p><br>
+        <p>I placed emphasis on simplified layout designs and intentional curation of images. I worked closely with marketing and ecommmerce teams to ensure that high-performing products were featured and all key categories were captured.</p>
+		<p>I developed my designs for email &amp; social assets around the stories of spring cleaning and creating functional zones within the bedroom (with an emphasis on storage furniture).</p><br>
 		
-		<hr class="divider"></hr>
+		<hr class="divider"></hr><br>
 	  
 		<h2>Site</h2>
 		
-        <img src="../images/pbteen/SP223_ContentShopPath_Storage_Desktop.gif" id="final-des" alt="PBTeen Storage & Organization Landing Page Redesign Desktop"><br>
+        <img src="../images/pbteen/SP223_ContentShopPath_Storage_Desktop.gif" id="final-des" alt="PBTeen Storage & Organization Landing Page Redesign Desktop"><br><br>
 		
-		<hr class="divider"></hr>
+		<hr class="divider"></hr><br>
 	  
 		<h2>Email</h2>
 	  	
@@ -119,7 +120,7 @@
 		</ul>
 		
 	  
-	  	<hr class="divider"></hr>
+	  	<hr class="divider"></hr><br>
 	  
 		<h2>Social</h2>
 		
