--- a/projects/pbteen.html
+++ b/projects/pbteen.html
@@ -98,7 +98,7 @@
   
 
     <section class="content-2">
-        <h2>The primary aim of this project was to create an elevated shopping experience for the customer across all channels.</h2>
+        <h2>The primary aim of this project was to create an elevated shopping experience for the customer across all digital channels.</h2>
         <hr class="rule" style="color:#108046;background-color:#94acbb;">
         <p>I placed emphasis on simplified layout designs and intentional curation of images. I worked closely with marketing and ecommmerce teams to ensure that high-performing products were featured and all key categories were captured.</p>
 		<p>I developed my designs for email &amp; social assets around the stories of spring cleaning and creating functional zones within the bedroom (with an emphasis on storage furniture).</p><br>
